--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 
 
         <h1>
-        Naslov 1
+        Moja web stranica
         </h1>
 
-        Ovo je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i> ,a ponekad
-        <b>podebljanj</b>. Poželim li to, mogu ga, primjerice, učiniti
-        istovremeno <i><b>i podebljanim i ukošenim</b></i>.
+        <p>
+        <br> Ovo je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i> ,a ponekad
+        <br> <b>podebljanj</b>. Poželim li to, mogu ga, primjerice, učiniti
+        <br> istovremeno <i><b>i podebljanim i ukošenim</b></i>.
+        </p>
 
         <h2>
             <b>Hodošanska himna</b> 
@@ -28,10 +30,7 @@
 
         
 
-        <h2>   
-            Naslov
 
-        </h2>
 
         <h2>
             Ovo je lista mojih omiljenih filmova:
@@ -60,11 +59,11 @@
             Informaticki pojmovi:
         </h2>
             <dl>
-                <dt>Procesor</dt>
+                <dt> <b>Procesor</b> </dt>
                     <dd>središnja jedinica za obradbu</dd>
-                <dt>Matična ploča</dt>
+                <dt> <b>Matična ploča</b> </dt>
                     <dd>središnji dio sklopovlja u računalu</dd>
-                <dt>Hard disk</dt>
+                <dt> <b>Hard disk</b>  </dt>
                     <dd>sekundarna jedinica za pohranu podataka u računalima</dd>
 
             </dl>
@@ -77,7 +76,3 @@
 
 
     </body>
-
-
-
-</html>
