--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <p>
         <br> Ovo je <b>moj</b> tekst. Ponekad je malo <i>ukošen</i> ,a ponekad
-        <br> <b>podebljanj</b>. Poželim li to, mogu ga, primjerice, učiniti
+        <br> <b>podebljan</b>. Poželim li to, mogu ga, primjerice, učiniti
         <br> istovremeno <i><b>i podebljanim i ukošenim</b></i>.
         </p>
 
