--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <dd>sekundarna jedinica za pohranu podataka u računalima</dd>
 
             </dl>
-            <img src="hqdefault" width="500" height="300" alt="hqdefault">
+            <img src="hqdefault.jpg" width="500" height="300" alt="hqdefault.jpg">
             <img src="hqdefault.jpg">
             <table border = "1">
                 <tr>
