--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
                     <dd>sekundarna jedinica za pohranu podataka u računalima</dd>
 
             </dl>
-            <img src="hqdefault.jpg" width="500" height="300" alt="hqdefault.jpg">
-            <img src="hqdefault.jpg">
+        <img src="hqdefault.jpeg">
+        <width=100></width>
+        <height=100></height>
             <table border = "1">
                 <tr>
                     <td>1</td>
