--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
                     <dd>sekundarna jedinica za pohranu podataka u računalima</dd>
 
             </dl>
-        <img src="hqdefault.jpeg">
-        <width=100></width>
-        <height=100></height>
+            <img src="hqdefault" width="500" height="300" alt="hqdefault">
+           
             <table border = "1">
                 <tr>
                     <td>1</td>
