--- a/o_meni.html
+++ b/o_meni.html
@@ -2,6 +2,7 @@
 
 <body>
     <a href="https://www.youtube.com/watch?v=OWKzRngush4">Moja omiljena pjesma</a>
+    <a href="../index.html">Povratak</a>
 </body>
 
 </html>
