--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
     <img src="" alt="">
    
 
+    <input type="IME" name="ime" size="n" maxlength="m">
+    <input type="PREZIME" name="prezime" size="n" maxlength="m">
 
 
     
