--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             </dl>
             <img src="pas.jpg" width="500" height="300" alt="Pas">
-            <img src="mali-zec-slika.jpg">
+            <img src="pas.jpg">
             <table border = "1">
                 <tr>
                     <td>1</td>
