--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <dd>sekundarna jedinica za pohranu podataka u računalima</dd>
 
             </dl>
-            <img src="pas.jpg" width="500" height="300" alt="Pas">
-            <img src="pas.jpg">
+            <img src="hqdefault.jpg" width="500" height="300" alt="Pas">
+            <img src="hqdefault.jpg">
             <table border = "1">
                 <tr>
                     <td>1</td>
